<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:id="@+id/rlAlertDialogLayout"
        android:layout_width="285dp"
        android:layout_height="222dp"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/llControlButtons"
            android:layout_alignRight="@+id/llControlButtons"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp" >
            
            <EditText
                android:id="@+id/etGroupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/lines"
                android:hint="@string/enter_group_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/hookup_positive"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llControlButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp" >

            <Button
                android:id="@+id/btnOk"
                android:layout_width="96dp"
                android:layout_height="33dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_rect_positive_selector"
                android:gravity="center"
                android:text="@string/OK"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="96dp"
                android:layout_height="33dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rounded_rect_alert_selector"
                android:gravity="center"
                android:text="@string/CANCEL"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>